# ore-infinium

./: .gitignore  CMakeLists.txt  INSTALL  README.md  about.html  index.html  launcher.sh  media.html
cmake_modules/: FindChipmunk.cmake  FindLibNoise.cmake  FindProtobuf.cmake  FindSDL_image.cmake  FindWebP.cmake  FindYamlCpp.cmake
src/: CMakeLists.txt  activechunk.cpp  activechunk.h  block.cpp  block.h  camera.cpp  camera.h  chunk.h  debug.cpp  debug.h  entity.cpp  entity.h  fluidcell.cpp  fluidcell.h  fluidrenderer.cpp  fluidrenderer.h  fluids.cpp  fluids.h  game.cpp  game.h  globals.h  image.cpp  image.h  item.cpp  item.h  lightrenderer.cpp  lightrenderer.h  main.cpp  object.cpp  object.h  packet.proto  particlerenderer.cpp  particlerenderer.frag  particlerenderer.gs  particlerenderer.h  particlerenderer.vert  particlerenderer_smoke.frag  particlerenderer_smoke.vert  particlerenderer_transform_fire.vert  physicsdebugrenderer.cpp  (+44 more)
src/client/: FboInSGRenderer.cpp  FboInSGRenderer.h  client.cpp  client.h  graph.cpp  graph.h
src/client/gui/: chatdialog.cpp  chatdialog.h  chatmodel.cpp  chatmodel.h  debugmenu.cpp  debugmenu.h  debugsettings.cpp  decoratorspritesheet.cpp  decoratorspritesheet.h  mainmenu.cpp  optionsdialog.cpp  optionsdialogbackend.cpp  optionsdialogbackend.h  quickbarmenu.cpp  quickbarmenu.h
src/client/gui/assets/: debugSettings.rml  quickBarSwitchedTooltip.rml
src/client/gui/assets/qml/: MenuStyle.qml  OreButton.qml  OreComboBox.qml  OreComboBoxStyle.qml  OreLabel.qml  OreTextBox.qml  chatView.qml  debugMenu.qml  escapeMenu.qml  main.qml  mainMenu.qml  mainmenu.qml  multiplayerHostMenu.qml  multiplayerJoinMenu.qml  multiplayerMenu.qml  optionsDialog.qml  qmldir  singlePlayerMenu.qml  singleplayerCreateMenu.qml  singleplayerLoadMenu.qml  singleplayerMenu.qml  window.qml
src/client/gui/assets/qml/controls/: OreButton.qml  OreComboBox.qml  OreComboBoxStyle.qml  OreLabel.qml  OreTextBox.qml  qmldir
src/client/gui/core/: Shell.cpp  ShellOpenGL.h  ShellRenderInterfaceOpenGL.cpp  ShellRenderInterfaceOpenGL.h
src/network/: packet.cpp  packet.h
src/server/: contactlistener.cpp  contactlistener.h  server.cpp  server.h
src/settings/: settings.cpp  settings.h
textures/: LICENSE  celestialBodies.xcf  characters.xcf  characters.yaml  entities.xcf  entities.yaml  skyBackgroundDay.xcf  skyBackgroundNight.xcf
textures/tileWalls/: dirtWallType.xcf
utils/GLEW/: glew.c
